[package]
name = "oauth_tsl"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the OAuth Token Status List specification by IETF."
homepage = "https://www.impierce.com/"
keywords = ["revocation", "status", "list"]
license = "Apache-2.0"
repository = "https://github.com/impierce/oauth-token-status-list"

[workspace.package]
homepage = "https://www.impierce.com/"
license = "Apache-2.0"
repository = "https://github.com/impierce/oauth-token-status-list"

[workspace.dependencies]

[dependencies]
base64 = "0.22"
chrono = "0.4.41"
flate2 = { version = "1.0", default-features = false, features = ["zlib"] }
jsonwebtoken = "9.3.1"
reqwest = "0.12.20"
serde = { version = "1.0", features = ["derive"]}
tokio = "1.45.1"
wiremock = "0.6.3"
